--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html>
     <body>
-        <h1>This is a Header </h1>
+        <h1>This is a Header</h1>
+        <p>This is a Paragraph</p>
     </body>
 </html>
